very slow progress

--- a/report/main.tex
+++ b/report/main.tex
@@ -128,6 +128,13 @@
 \maketitle
 \centerline{\author{Parisa S. Ataei}}
 
+\begin{comment}
+%Mike's comments on the report:
+Great thorough description of the language syntax etc. The description of the formulas is a good start but still confusing to me. I can't see that these formulas are doing NP stuff, but they look like they are just checking P conditions. NP is about guess+check, and it might help to think about what is guessed and what is checked in the final formula (i.e., what are the free variables)?
+
+For inputs of different sizes, what is the size of the formula and how long does it take the solver to run? Can you find both yes and no-instances to this NP-hard problem? Where will you find/generate sample data? How does the cost of the solver scale with input size of the problem? What is the limit of feasible inputs that can be solved with this method?
+\end{comment}
+
 \section{Introduction}
 \label{sec:intro}
 
